fixed overflow

--- a/React/src/feedbackWindow.css
+++ b/React/src/feedbackWindow.css
@@ -135,10 +135,11 @@
 .sup {
     position: relative;
     display: flex;
-    width: 50%;
+    width: 55%;
+    max-width: 300px;
     flex-direction: column;
     align-items: end;
-    row-gap: 2vh;
+    row-gap: 1vh;
 }
 
 .values {
@@ -245,7 +246,7 @@
     width: 90%;
     margin-right: 1%;
     height: auto;
-    max-height: 20vh;
+    max-height: 19vh;
     display: flex;
     flex-direction: column;
     /* -ms-flex-item-align: start; */
@@ -254,6 +255,11 @@
 .FeedDesc.hide {
     position: relative;
     overflow-y: auto;
+}
+
+
+.FeedDesc.hide>p{
+    margin-top: 0.5vh;
 }
 
 .FeedDesc.hide::-webkit-scrollbar-track
